overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontapp-ingress
spec:
  rules:
  - host: devhost
    http:
      paths: []
